--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-<meta charset="UTF-8" />
-<title>Shader mit echten Orbit Controls und animierten Parametern</title>
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<style>
-  html, body {
-    margin: 0; padding: 0; overflow: hidden; background: black;
-    height: 100%;
-    user-select: none;
-  }
-  canvas {
-    width: 100vw;
-    height: 100vh;
-    display: block;
-    cursor: grab;
-  }
-  canvas:active {
-    cursor: grabbing;
-  }
-</style>
+  <meta charset="UTF-8" />
+  <title>Shader mit echten Orbit Controls & Touch</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    html, body {
+      margin: 0; padding: 0; overflow: hidden; background: black;
+      height: 100%;
+      user-select: none;
+      -webkit-user-select: none;
+    }
+    canvas {
+      width: 100vw;
+      height: 100vh;
+      display: block;
+      touch-action: none;
+      cursor: grab;
+    }
+    canvas:active {
+      cursor: grabbing;
+    }
+  </style>
 </head>
 <body>
 <canvas id="glcanvas"></canvas>
@@ -40,20 +42,12 @@ uniform vec3 camTarget;
 
 mat3 rotationY(float angle) {
   float s = sin(angle), c = cos(angle);
-  return mat3(
-    c, 0.0, -s,
-    0.0, 1.0, 0.0,
-    s, 0.0, c
-  );
+  return mat3(c, 0.0, -s, 0.0, 1.0, 0.0, s, 0.0, c);
 }
 
 mat3 rotationZ(float angle) {
   float s = sin(angle), c = cos(angle);
-  return mat3(
-    c, s, 0.0,
-   -s, c, 0.0,
-    0.0, 0.0, 1.0
-  );
+  return mat3(c, s, 0.0, -s, c, 0.0, 0.0, 0.0, 1.0);
 }
 
 float fBox(vec3 p, vec3 b) {
@@ -62,7 +56,7 @@ float fBox(vec3 p, vec3 b) {
 }
 
 float scene(vec3 p, float time) {
-  float t = time * 0.25; // insgesamt langsamer
+  float t = time * 0.25;
 
   float baseSize     = 0.3 + 0.12 * sin(t * 0.6 + 0.5);
   float smallBoxSize = 0.1 + 0.08 * cos(t * 0.9 + 1.2);
@@ -70,11 +64,11 @@ float scene(vec3 p, float time) {
   float translation  = 0.25 * sin(t * 0.2);
 
   vec3 pos = p;
-  float value = 1.0;
-
   pos.z += translation;
 
+  float value = 1.0;
   float valueAnim = value;
+
   for (int i = 0; i < 6; i++) {
     vec2 absXY = abs(pos.xy) - valueAnim;
     pos = vec3(absXY, pos.z);
@@ -197,10 +191,10 @@ gl.enableVertexAttribArray(posLoc);
 gl.vertexAttribPointer(posLoc, 3, gl.FLOAT, false, 0, 0);
 
 // Orbit Controls
-let theta = Math.PI/4;
-let phi = Math.PI/4;
+let theta = Math.PI / 4;
+let phi = Math.PI / 4;
 let radius = 4.0;
-let target = [0,0,0];
+let target = [0, 0, 0];
 
 let isDragging = false;
 let isPanning = false;
@@ -213,24 +207,18 @@ canvas.addEventListener('mousedown', (e) => {
   isPanning = e.button === 2 || e.shiftKey;
   e.preventDefault();
 });
-canvas.addEventListener('mouseup', () => {
-  isDragging = false;
-  isPanning = false;
-});
-canvas.addEventListener('mouseleave', () => {
-  isDragging = false;
-  isPanning = false;
-});
+canvas.addEventListener('mouseup', () => { isDragging = false; isPanning = false; });
+canvas.addEventListener('mouseleave', () => { isDragging = false; isPanning = false; });
 canvas.addEventListener('mousemove', (e) => {
   if (!isDragging) return;
-  let dx = e.clientX - lastX;
-  let dy = e.clientY - lastY;
+  const dx = e.clientX - lastX;
+  const dy = e.clientY - lastY;
   lastX = e.clientX;
   lastY = e.clientY;
 
   if (isPanning) {
     const panSpeed = 0.005 * radius;
-    let up = [0,1,0];
+    let up = [0, 1, 0];
     let camPos = getCamPos();
     let forward = normalize(subtractVectors(target, camPos));
     let right = normalize(cross(forward, up));
@@ -249,12 +237,100 @@ canvas.addEventListener('mousemove', (e) => {
     phi = Math.max(eps, Math.min(Math.PI - eps, phi));
   }
 });
+
 canvas.addEventListener('wheel', (e) => {
   e.preventDefault();
   const zoomSpeed = 0.0015;
   radius += e.deltaY * zoomSpeed;
   radius = Math.max(0.5, Math.min(20, radius));
 });
+
+// Touch Controls
+let touchStartDist = 0;
+let lastTouchMid = null;
+let lastTouchCount = 0;
+
+canvas.addEventListener('touchstart', (e) => {
+  e.preventDefault();
+  lastTouchCount = e.touches.length;
+
+  if (e.touches.length === 2) {
+    const dx = e.touches[0].clientX - e.touches[1].clientX;
+    const dy = e.touches[0].clientY - e.touches[1].clientY;
+    touchStartDist = Math.sqrt(dx * dx + dy * dy);
+
+    lastTouchMid = {
+      x: (e.touches[0].clientX + e.touches[1].clientX) / 2,
+      y: (e.touches[0].clientY + e.touches[1].clientY) / 2
+    };
+  }
+
+  if (e.touches.length === 1) {
+    lastX = e.touches[0].clientX;
+    lastY = e.touches[0].clientY;
+  }
+});
+
+canvas.addEventListener('touchmove', (e) => {
+  e.preventDefault();
+  const touches = e.touches;
+
+  if (touches.length === 1 && lastTouchCount === 1) {
+    const dx = touches[0].clientX - lastX;
+    const dy = touches[0].clientY - lastY;
+    lastX = touches[0].clientX;
+    lastY = touches[0].clientY;
+
+    const orbitSpeed = 0.005;
+    theta -= dx * orbitSpeed;
+    phi -= dy * orbitSpeed;
+    const eps = 0.01;
+    phi = Math.max(eps, Math.min(Math.PI - eps, phi));
+  }
+
+  if (touches.length === 2) {
+    const dx = touches[0].clientX - touches[1].clientX;
+    const dy = touches[0].clientY - touches[1].clientY;
+    const dist = Math.sqrt(dx * dx + dy * dy);
+
+    const mid = {
+      x: (touches[0].clientX + touches[1].clientX) / 2,
+      y: (touches[0].clientY + touches[1].clientY) / 2
+    };
+
+    const zoomSpeed = 0.01;
+    const delta = dist - touchStartDist;
+    radius -= delta * zoomSpeed;
+    radius = Math.max(0.5, Math.min(20, radius));
+    touchStartDist = dist;
+
+    const panSpeed = 0.005 * radius;
+    const dxMid = mid.x - lastTouchMid.x;
+    const dyMid = mid.y - lastTouchMid.y;
+
+    let up = [0, 1, 0];
+    let camPos = getCamPos();
+    let forward = normalize(subtractVectors(target, camPos));
+    let right = normalize(cross(forward, up));
+    let camUp = normalize(cross(right, forward));
+    target = addVectors(target,
+      addVectors(
+        scaleVector(right, -dxMid * panSpeed),
+        scaleVector(camUp, dyMid * panSpeed)
+      )
+    );
+
+    lastTouchMid = mid;
+  }
+
+  lastTouchCount = touches.length;
+});
+
+canvas.addEventListener('touchend', () => {
+  lastTouchCount = 0;
+});
+
+canvas.addEventListener('contextmenu', e => e.preventDefault());
 
 function subtractVectors(a,b) {
   return [a[0]-b[0], a[1]-b[1], a[2]-b[2]];
@@ -301,7 +377,6 @@ function render(t) {
   requestAnimationFrame(render);
 }
 requestAnimationFrame(render);
-canvas.addEventListener('contextmenu', e => e.preventDefault());
 </script>
 </body>
 </html>
