--- a/index.html
+++ b/index.html
@@ -2,20 +2,19 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <title>Shader mit echten Orbit Controls & Touch</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Orbit Controls mit Dämpfung (WebGL Shader)</title>
   <style>
     html, body {
-      margin: 0; padding: 0; overflow: hidden; background: black;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background: black;
       height: 100%;
-      user-select: none;
-      -webkit-user-select: none;
     }
     canvas {
       width: 100vw;
       height: 100vh;
       display: block;
-      touch-action: none;
       cursor: grab;
     }
     canvas:active {
@@ -40,14 +39,14 @@ uniform float time;
 uniform vec3 camPos;
 uniform vec3 camTarget;
 
-mat3 rotationY(float angle) {
-  float s = sin(angle), c = cos(angle);
-  return mat3(c, 0.0, -s, 0.0, 1.0, 0.0, s, 0.0, c);
+mat3 rotationY(float a) {
+  float s = sin(a), c = cos(a);
+  return mat3(c, 0, -s, 0, 1, 0, s, 0, c);
 }
 
-mat3 rotationZ(float angle) {
-  float s = sin(angle), c = cos(angle);
-  return mat3(c, s, 0.0, -s, c, 0.0, 0.0, 0.0, 1.0);
+mat3 rotationZ(float a) {
+  float s = sin(a), c = cos(a);
+  return mat3(c, s, 0, -s, c, 0, 0, 0, 1);
 }
 
 float fBox(vec3 p, vec3 b) {
@@ -56,34 +55,27 @@ float fBox(vec3 p, vec3 b) {
 }
 
 float scene(vec3 p, float time) {
-  float t = time * 0.25;
-
-  float baseSize     = 0.3 + 0.12 * sin(t * 0.6 + 0.5);
-  float smallBoxSize = 0.1 + 0.08 * cos(t * 0.9 + 1.2);
-  float sphereRadius = 0.4 + 0.15 * sin(t * 0.4 + 2.5);
-  float translation  = 0.25 * sin(t * 0.2);
+  float baseSize = 0.3 + 0.08 * sin(time * 0.25);
+  float smallBoxSize = 0.1 + 0.05 * cos(time * 0.17);
+  float sphereRadius = 0.4 + 0.1 * sin(time * 0.19 + 1.0);
+  float translation = 0.25 * sin(time * 0.07);
 
   vec3 pos = p;
   pos.z += translation;
 
   float value = 1.0;
-  float valueAnim = value;
-
   for (int i = 0; i < 6; i++) {
-    vec2 absXY = abs(pos.xy) - valueAnim;
+    vec2 absXY = abs(pos.xy) - value;
     pos = vec3(absXY, pos.z);
-    pos = rotationY(t * (0.08 + 0.03 * float(i))) * pos;
-    pos = rotationZ(t * (0.05 + 0.02 * float(i))) * pos;
-    valueAnim *= 0.88;
+    pos = rotationY(time * (0.1 + 0.05 * float(i))) * pos;
+    pos = rotationZ(time * (0.07 + 0.03 * float(i))) * pos;
+    value *= 0.9;
   }
 
-  float box1 = fBox(pos, vec3(baseSize));
-  float box2 = fBox(pos, vec3(smallBoxSize));
-  float d = -box1;
-  d = min(d, box2);
-
+  float d1 = fBox(pos, vec3(baseSize));
+  float d2 = fBox(pos, vec3(smallBoxSize));
   float sphere = length(pos) - sphereRadius;
-  return max(d, sphere);
+  return max(min(-d1, d2), sphere);
 }
 
 vec3 getNormal(vec3 p, float time) {
@@ -103,16 +95,15 @@ void main() {
   vec3 ro = camPos;
   vec3 ta = camTarget;
   vec3 f = normalize(ta - ro);
-  vec3 r = normalize(cross(vec3(0.0,1.0,0.0), f));
+  vec3 r = normalize(cross(vec3(0,1,0), f));
   vec3 u = cross(f, r);
   vec3 rd = normalize(uv.x * r + uv.y * u + f);
 
   float t = 0.0;
-  float d;
   bool hit = false;
-  for(int i = 0; i < 100; i++) {
+  for (int i = 0; i < 100; i++) {
     vec3 p = ro + rd * t;
-    d = scene(p, time);
+    float d = scene(p, time);
     if (d < 0.001) {
       hit = true;
       break;
@@ -121,13 +112,13 @@ void main() {
     t += d;
   }
 
-  vec3 col = vec3(0.0);
+  vec3 col = vec3(0);
   if (hit) {
     vec3 p = ro + rd * t;
     vec3 n = getNormal(p, time);
-    vec3 lightDir = normalize(vec3(0.7, 1.0, 0.8));
-    float diff = clamp(dot(n, lightDir), 0.0, 1.0);
-    float spec = pow(clamp(dot(reflect(-lightDir, n), -rd), 0.0, 1.0), 16.0);
+    vec3 lightDir = normalize(vec3(0.7, 1, 0.8));
+    float diff = max(dot(n, lightDir), 0.0);
+    float spec = pow(max(dot(reflect(-lightDir, n), -rd), 0.0), 16.0);
     col = vec3(0.8, 0.9, 1.0) * diff + vec3(1.0) * spec * 0.4;
     col = pow(col, vec3(0.4545));
   }
@@ -137,6 +128,7 @@ void main() {
 </script>
 
 <script>
+// WebGL Setup
 const canvas = document.getElementById('glcanvas');
 const gl = canvas.getContext('webgl');
 if (!gl) alert('WebGL nicht unterstützt');
@@ -149,6 +141,7 @@ function resize() {
 window.addEventListener('resize', resize);
 resize();
 
+// Shader
 function compileShader(type, source) {
   const shader = gl.createShader(type);
   gl.shaderSource(shader, source);
@@ -159,28 +152,22 @@ function compileShader(type, source) {
   }
   return shader;
 }
-
-const vsSource = document.querySelector('script[type="x-shader/x-vertex"]').textContent;
-const fsSource = document.querySelector('script[type="x-shader/x-fragment"]').textContent;
-
-const vertexShader = compileShader(gl.VERTEX_SHADER, vsSource);
-const fragmentShader = compileShader(gl.FRAGMENT_SHADER, fsSource);
-
+const vs = compileShader(gl.VERTEX_SHADER, document.querySelector('script[type="x-shader/x-vertex"]').textContent);
+const fs = compileShader(gl.FRAGMENT_SHADER, document.querySelector('script[type="x-shader/x-fragment"]').textContent);
 const program = gl.createProgram();
-gl.attachShader(program, vertexShader);
-gl.attachShader(program, fragmentShader);
+gl.attachShader(program, vs);
+gl.attachShader(program, fs);
 gl.linkProgram(program);
-if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
-  console.error(gl.getProgramInfoLog(program));
-}
 gl.useProgram(program);
 
+// Locations
 const posLoc = gl.getAttribLocation(program, 'position');
 const resLoc = gl.getUniformLocation(program, 'resolution');
 const timeLoc = gl.getUniformLocation(program, 'time');
 const camPosLoc = gl.getUniformLocation(program, 'camPos');
 const camTargetLoc = gl.getUniformLocation(program, 'camTarget');
 
+// Fullscreen Quad
 const buffer = gl.createBuffer();
 gl.bindBuffer(gl.ARRAY_BUFFER, buffer);
 gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([
@@ -190,165 +177,60 @@ gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([
 gl.enableVertexAttribArray(posLoc);
 gl.vertexAttribPointer(posLoc, 3, gl.FLOAT, false, 0, 0);
 
-// Orbit Controls
-let theta = Math.PI / 4;
-let phi = Math.PI / 4;
-let radius = 4.0;
+// Orbit Controls mit Dämpfung
+let theta = Math.PI / 4, phi = Math.PI / 4, radius = 4;
+let thetaTarget = theta, phiTarget = phi, radiusTarget = radius;
 let target = [0, 0, 0];
 
-let isDragging = false;
-let isPanning = false;
+let dragging = false;
+let panning = false;
 let lastX = 0, lastY = 0;
 
-canvas.addEventListener('mousedown', (e) => {
-  isDragging = true;
+canvas.addEventListener('mousedown', e => {
+  dragging = true;
+  panning = e.button === 2 || e.shiftKey;
   lastX = e.clientX;
   lastY = e.clientY;
-  isPanning = e.button === 2 || e.shiftKey;
-  e.preventDefault();
 });
-canvas.addEventListener('mouseup', () => { isDragging = false; isPanning = false; });
-canvas.addEventListener('mouseleave', () => { isDragging = false; isPanning = false; });
-canvas.addEventListener('mousemove', (e) => {
-  if (!isDragging) return;
+canvas.addEventListener('mouseup', () => dragging = false);
+canvas.addEventListener('mousemove', e => {
+  if (!dragging) return;
   const dx = e.clientX - lastX;
   const dy = e.clientY - lastY;
   lastX = e.clientX;
   lastY = e.clientY;
 
-  if (isPanning) {
+  if (panning) {
     const panSpeed = 0.005 * radius;
-    let up = [0, 1, 0];
-    let camPos = getCamPos();
-    let forward = normalize(subtractVectors(target, camPos));
-    let right = normalize(cross(forward, up));
-    let camUp = normalize(cross(right, forward));
-    target = addVectors(target,
-      addVectors(
-        scaleVector(right, -dx * panSpeed),
-        scaleVector(camUp, dy * panSpeed)
-      )
-    );
+    const camPos = getCamPos();
+    const forward = normalize(subtract(target, camPos));
+    const right = normalize(cross(forward, [0, 1, 0]));
+    const up = normalize(cross(right, forward));
+    target = add(target, add(scale(right, -dx * panSpeed), scale(up, dy * panSpeed)));
   } else {
-    const orbitSpeed = 0.005;
-    theta -= dx * orbitSpeed;
-    phi -= dy * orbitSpeed;
-    const eps = 0.01;
-    phi = Math.max(eps, Math.min(Math.PI - eps, phi));
+    thetaTarget += dx * 0.005; // nicht gespiegelt!
+    phiTarget -= dy * 0.005;
+    phiTarget = Math.max(0.01, Math.min(Math.PI - 0.01, phiTarget));
   }
 });
-
-canvas.addEventListener('wheel', (e) => {
-  e.preventDefault();
-  const zoomSpeed = 0.0015;
-  radius += e.deltaY * zoomSpeed;
-  radius = Math.max(0.5, Math.min(20, radius));
+canvas.addEventListener('wheel', e => {
+  radiusTarget += e.deltaY * 0.0015;
+  radiusTarget = Math.max(1, Math.min(20, radiusTarget));
 });
-
-// Touch Controls
-let touchStartDist = 0;
-let lastTouchMid = null;
-let lastTouchCount = 0;
-
-canvas.addEventListener('touchstart', (e) => {
-  e.preventDefault();
-  lastTouchCount = e.touches.length;
-
-  if (e.touches.length === 2) {
-    const dx = e.touches[0].clientX - e.touches[1].clientX;
-    const dy = e.touches[0].clientY - e.touches[1].clientY;
-    touchStartDist = Math.sqrt(dx * dx + dy * dy);
-
-    lastTouchMid = {
-      x: (e.touches[0].clientX + e.touches[1].clientX) / 2,
-      y: (e.touches[0].clientY + e.touches[1].clientY) / 2
-    };
-  }
-
-  if (e.touches.length === 1) {
-    lastX = e.touches[0].clientX;
-    lastY = e.touches[0].clientY;
-  }
-});
-
-canvas.addEventListener('touchmove', (e) => {
-  e.preventDefault();
-  const touches = e.touches;
-
-  if (touches.length === 1 && lastTouchCount === 1) {
-    const dx = touches[0].clientX - lastX;
-    const dy = touches[0].clientY - lastY;
-    lastX = touches[0].clientX;
-    lastY = touches[0].clientY;
-
-    const orbitSpeed = 0.005;
-    theta -= dx * orbitSpeed;
-    phi -= dy * orbitSpeed;
-    const eps = 0.01;
-    phi = Math.max(eps, Math.min(Math.PI - eps, phi));
-  }
-
-  if (touches.length === 2) {
-    const dx = touches[0].clientX - touches[1].clientX;
-    const dy = touches[0].clientY - touches[1].clientY;
-    const dist = Math.sqrt(dx * dx + dy * dy);
-
-    const mid = {
-      x: (touches[0].clientX + touches[1].clientX) / 2,
-      y: (touches[0].clientY + touches[1].clientY) / 2
-    };
-
-    const zoomSpeed = 0.01;
-    const delta = dist - touchStartDist;
-    radius -= delta * zoomSpeed;
-    radius = Math.max(0.5, Math.min(20, radius));
-    touchStartDist = dist;
-
-    const panSpeed = 0.005 * radius;
-    const dxMid = mid.x - lastTouchMid.x;
-    const dyMid = mid.y - lastTouchMid.y;
-
-    let up = [0, 1, 0];
-    let camPos = getCamPos();
-    let forward = normalize(subtractVectors(target, camPos));
-    let right = normalize(cross(forward, up));
-    let camUp = normalize(cross(right, forward));
-    target = addVectors(target,
-      addVectors(
-        scaleVector(right, -dxMid * panSpeed),
-        scaleVector(camUp, dyMid * panSpeed)
-      )
-    );
-
-    lastTouchMid = mid;
-  }
-
-  lastTouchCount = touches.length;
-});
-
-canvas.addEventListener('touchend', () => {
-  lastTouchCount = 0;
-});
-
 canvas.addEventListener('contextmenu', e => e.preventDefault());
 
-function subtractVectors(a,b) {
-  return [a[0]-b[0], a[1]-b[1], a[2]-b[2]];
+function getCamPos() {
+  const sinPhi = Math.sin(phi), cosPhi = Math.cos(phi);
+  const x = radius * sinPhi * Math.sin(theta);
+  const y = radius * cosPhi;
+  const z = radius * sinPhi * Math.cos(theta);
+  return add(target, [x, y, z]);
 }
-function addVectors(a,b) {
-  return [a[0]+b[0], a[1]+b[1], a[2]+b[2]];
-}
-function scaleVector(v,s) {
-  return [v[0]*s, v[1]*s, v[2]*s];
-}
-function lengthVector(v) {
-  return Math.sqrt(v[0]*v[0]+v[1]*v[1]+v[2]*v[2]);
-}
-function normalize(v) {
-  let len = lengthVector(v);
-  if(len>0.00001) return scaleVector(v, 1/len);
-  return [0,0,0];
-}
+
+// Vektor-Utils
+function add(a,b) { return [a[0]+b[0], a[1]+b[1], a[2]+b[2]]; }
+function subtract(a,b) { return [a[0]-b[0], a[1]-b[1], a[2]-b[2]]; }
+function scale(v,s) { return [v[0]*s, v[1]*s, v[2]*s]; }
 function cross(a,b) {
   return [
     a[1]*b[2] - a[2]*b[1],
@@ -356,21 +238,22 @@ function cross(a,b) {
     a[0]*b[1] - a[1]*b[0]
   ];
 }
-function getCamPos() {
-  let sinPhi = Math.sin(phi);
-  let x = radius * sinPhi * Math.sin(theta);
-  let y = radius * Math.cos(phi);
-  let z = radius * sinPhi * Math.cos(theta);
-  return addVectors(target, [x,y,z]);
+function normalize(v) {
+  const len = Math.sqrt(v[0]**2 + v[1]**2 + v[2]**2);
+  return len > 1e-6 ? scale(v, 1 / len) : [0,0,0];
 }
 
-function render(t) {
-  gl.viewport(0, 0, canvas.width, canvas.height);
-  gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
-  let camPos = getCamPos();
-  gl.useProgram(program);
+function render(time) {
+  // Dämpfung
+  const damp = 0.1;
+  theta += (thetaTarget - theta) * damp;
+  phi += (phiTarget - phi) * damp;
+  radius += (radiusTarget - radius) * damp;
+
+  const camPos = getCamPos();
+
   gl.uniform2f(resLoc, canvas.width, canvas.height);
-  gl.uniform1f(timeLoc, t * 0.001);
+  gl.uniform1f(timeLoc, time * 0.001);
   gl.uniform3fv(camPosLoc, camPos);
   gl.uniform3fv(camTargetLoc, target);
   gl.drawArrays(gl.TRIANGLES, 0, 6);
